Overflow fix: NO MORE SCROLL BAR!

--- a/less/index.less
+++ b/less/index.less
@@ -33,6 +33,7 @@
   }
   body {
     width: 0 100%;
+    height: 100vh;
   }
 
 .home {
@@ -90,6 +91,7 @@
 //background
   .back-drop {
     justify-content: space-around;
+    overflow: hidden;
     .flexcolumn();
     align-items: center;
     font-size: 1.8rem;
@@ -187,7 +189,7 @@
 
 //ABOUT PAGE
 .dumbNav {
-    margin-top:15px;
+    margin-top:2.6%;
 }
 
 //text
@@ -279,7 +281,11 @@ justify-content: space-evenly;
     width:100%;
     justify-content: center;
     display:flex;  
-    padding-bottom: 10px; 
+    padding-bottom: 3px; 
+
+    a:hover {
+      color: @pinkcolor;
+    }
   }
 }
 
@@ -290,7 +296,7 @@ justify-content: space-evenly;
 }
 
 
-}
+
 .slide {
   width: 100%;
   flex-shrink: 0;
@@ -363,6 +369,10 @@ justify-content: space-evenly;
 }
 .Special-p {
   background-color: rgba(0, 0, 0, 0);
+
+  @media @mobile {
+    font-size: 4rem;
+  }
 }
 p {
   background-color: rgba(0, 0, 0, 0.466);
@@ -370,6 +380,12 @@ p {
   text-align:center;
   padding-top:5px;
 }
+
+
+
+
+
+
 
 //footer
 
